[gd_scene load_steps=21 format=2]

[ext_resource path="res://entities/player/assets/idle/lizard_f_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://entities/player/player.gd" type="Script" id=2]
[ext_resource path="res://entities/player/assets/idle/lizard_f_idle_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://entities/player/assets/idle/lizard_f_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://entities/player/assets/idle/lizard_f_idle_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://entities/player/assets/running/lizard_f_run_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://entities/player/assets/running/lizard_f_run_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://entities/player/assets/running/lizard_f_run_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://entities/player/assets/running/lizard_f_run_anim_f2.png" type="Texture" id=9]
[ext_resource path="res://entities/player/assets/shadow/shadow_02.png" type="Texture" id=10]
[ext_resource path="res://entities/player/assets/shadow/shadow_01.png" type="Texture" id=11]
[ext_resource path="res://entities/player/assets/shadow/shadow_03.png" type="Texture" id=12]
[ext_resource path="res://entities/player/assets/shadow/shadow_04.png" type="Texture" id=13]
[ext_resource path="res://assets/fonts/equipaments/EquipmentPro.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://entities/weapons/swords/weapon.tscn" type="PackedScene" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "running",
"speed": 8.0
} ]

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -5.30121, 11.9277, -2.6506, 10.6024, 2.6506, 10.6024, 5.30121, 11.9277, 6.62651, 14.5783, 3.97591, 15.9036, -3.97591, 15.9036, -6.62651, 14.5783 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 3 )

[sub_resource type="DynamicFont" id=4]
size = 10
outline_size = 1
outline_color = Color( 0.337255, 0.0156863, 0.0156863, 1 )
font_data = ExtResource( 14 )

[node name="player" type="KinematicBody2D" groups=[
"players",
]]
script = ExtResource( 2 )

[node name="weapon" parent="." instance=ExtResource( 15 )]

[node name="Sprite" type="AnimatedSprite" parent="."]
light_mask = 0
position = Vector2( -1.19209e-07, -7 )
scale = Vector2( 0.754545, 0.754545 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
occluder = SubResource( 5 )

[node name="Shadow" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 3 )
scale = Vector2( 0.916665, 0.916665 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="HitBox" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="Name" type="Label" parent="."]
margin_left = -9.0
margin_top = -27.0
margin_right = 9.0
margin_bottom = -13.0
custom_fonts/font = SubResource( 4 )
text = "Igor"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="AttackDuration" type="Timer" parent="."]
wait_time = 0.5

[node name="HurtDuration" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="AttackDuration" to="." method="_on_AttackDuration_timeout"]
[connection signal="timeout" from="HurtDuration" to="." method="_on_HurtDuration_timeout"]
